# zuse

./: .babelrc  .eslintignore  .eslintrc.yml  .gitignore  LICENSE  README.md  index.html  package.json  renovate.json  tailwind.config.js  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
crates/zuse-rs/: Cargo.toml
crates/zuse-rs/src/: backend.rs  cad.rs  font.json  lib.rs  shader.frag  shader.vert
crates/zuse-rs/src/cad/: draw_list.rs
js/: index.ts  style.css
js/components/: App.tsx  ZsCad.tsx
rs/: Cargo.toml
rs/src/: backend.rs  cad.rs  font.json  font.rs  golem_backend.rs  lib.rs  schematic.rs  symbol.rs  zs_cad.rs
rs/src/cad/: draw_list.rs  io.rs
src/: main.tsx  style.css
src/components/: App.tsx  ZsCad.tsx
