[package]
name = "zuse-rs"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
nalgebra = "0.22"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[dependencies.golem]
version = "0.1.7"
features = ['web-sys']

[dependencies.glow]
version = "0.6"
features = ['web-sys']
