[package]
name = "zuse-rs"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
js-sys = "0.3.45"
nalgebra = "0.23"
rstar = "0.8"
itertools = "0.9"
lazy_static = "1.4"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[dependencies.golem]
version = "0.1.7"
features = ['web-sys']

[dependencies.glow]
version = "0.4.0"
features = ['web-sys']

[profile.dev]
opt-level = 1
dwarf-debug-info = true
