[package]
name = "zuse-rs"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
edition = "2018"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
js-sys = "0.3.56"
nalgebra = { version = "0.30", features = ["serde-serialize"] }
rstar = { version = "0.9", features = ["serde"] }
itertools = "0.10"
lazy_static = "1.4"
serde_json = "1.0"
zuse-core = { git = "https://github.com/koba789/zuse-core#593cdd052d956be9b2dc56e21de6419c0dbad532" }
bytemuck = "1.9"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[dependencies.glow]
version = "0.11.0"

[profile.dev]
opt-level = 1
dwarf-debug-info = true
